InternexDev_Sandbox/src/objects/WebCash_Load_Batch__c.object
<CustomObject>
    <fields>
        <fullName>BackOut_Comment__c</fullName>
        <label>BackOut Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Client_Account_Name__c</fullName>
        <label>Client Account Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Name__c</fullName>
        <label>Client Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Job_Id__c</fullName>
        <label>Current Job Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Job_Message__c</fullName>
        <label>Current Job Message</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsBackOut__c</fullName>
        <defaultValue>false</defaultValue>
        <label>BackOut</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>No_of_Applied_Records__c</fullName>
        <defaultValue>0</defaultValue>
        <label>No of Applied Records</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_Credit_Records__c</fullName>
        <defaultValue>0</defaultValue>
        <label>No of Credit Records</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_Records__c</fullName>
        <label>No of Records</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reason__c</fullName>
        <defaultValue>&quot;-&quot;</defaultValue>
        <label>Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Records_Not_To_Be_Processed__c</fullName>
        <label>Records Not To Be Processed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Records_To_Be_Processed__c</fullName>
        <label>Records To Be Processed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Source_System__c</fullName>
        <label>Source System</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>In Progress</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Tomorrow_date__c</fullName>
        <formula>CreatedDate +1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tomorrow date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Total_Processed_Records__c</fullName>
        <label>Total Processed Records</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WebCash_Batch_Status__c</fullName>
        <formula>if(TEXT(Status__c) =&apos;Completed&apos;,&apos;PROCESSED&apos;,if(TEXT(Status__c)=&apos;In Progress&apos;,&apos;PROCESSING..&apos;,&apos;-&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <label>WebCash Batch</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Client_Name__c</columns>
        <columns>Client_Account_Name__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Batch Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>WebCash Batches</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>